[gd_scene load_steps=9 format=3 uid="uid://ckxysqmcvunp5"]

[ext_resource type="Script" path="res://src/modules/local_video/video/video_item_panel.gd" id="1_jy2dn"]
[ext_resource type="Texture2D" uid="uid://dx7dk0bfvldes" path="res://assets/icon/search_32.png" id="1_qvf35"]
[ext_resource type="Texture2D" uid="uid://byvceqj0cxf1n" path="res://assets/icon/sort_32.png" id="2_hn66x"]
[ext_resource type="PackedScene" uid="uid://dv7bqxhadg754" path="res://src/modules/local_video/video/video_item_container.tscn" id="3_s75ic"]
[ext_resource type="Shader" path="res://src/shaders/blur.gdshader" id="5_06jvb"]
[ext_resource type="Texture2D" uid="uid://b0pfn3wcd5hwa" path="res://icon.svg" id="6_5g1yo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f8uvx"]
content_margin_left = 30.0
content_margin_top = 5.0
content_margin_bottom = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cbis2"]
resource_local_to_scene = true
shader = ExtResource("5_06jvb")
shader_parameter/strength = 5.0
shader_parameter/iChannel0 = ExtResource("6_5g1yo")

[node name="VideoPanel" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jy2dn")

[node name="TabBar" type="TabBar" parent="."]
layout_mode = 2
tab_count = 1
tab_0/title = "所有视频"

[node name="SearchMargin" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="H" type="HBoxContainer" parent="SearchMargin"]
layout_mode = 2

[node name="SearchLineEdit" type="LineEdit" parent="SearchMargin/H"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_f8uvx")
placeholder_text = "搜索"
clear_button_enabled = true
flat = true

[node name="SearchButton" type="Button" parent="SearchMargin/H/SearchLineEdit"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -10.0
offset_right = 24.0
offset_bottom = 10.0
grow_vertical = 2
icon = ExtResource("1_qvf35")
alignment = 0
expand_icon = true

[node name="AddButton" type="Button" parent="SearchMargin/H"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_type_variation = &"AddButton"
text = "添加视频
"
expand_icon = true

[node name="AddButton2" type="Button" parent="SearchMargin/H"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_type_variation = &"AddButton"
text = "导入视频
"
expand_icon = true

[node name="FunctionMargin" type="MarginContainer" parent="."]
layout_mode = 2

[node name="H" type="HBoxContainer" parent="FunctionMargin"]
layout_mode = 2

[node name="Button" type="Button" parent="FunctionMargin/H"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
text = "
"
icon = ExtResource("2_hn66x")
icon_alignment = 1
expand_icon = true

[node name="CheckButton" type="CheckButton" parent="FunctionMargin/H"]
layout_mode = 2
text = "平铺 
"
alignment = 1

[node name="NumberLabel" type="Label" parent="FunctionMargin/H"]
layout_mode = 2
size_flags_horizontal = 10
text = "12/12"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="HFlow" type="HFlowContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5

[node name="VideoItemContainer" parent="ScrollContainer/HFlow" instance=ExtResource("3_s75ic")]
material = SubResource("ShaderMaterial_cbis2")
layout_mode = 2
